--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This page is under construction</h1>
-<p>Hosted with GitHub</p>
+<h1>Welcome to Alvin U. Lumbanraja's website!</h1>
+<p>This page is still under construction. For link to my repos, please go to github.com/alvinulido</p>
 </body>
 </html>
