--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Welcome to Alvin U. Lumbanraja's website!</h1>
-<p>This page is still under construction. For link to my repos, please go to github.com/alvinulido</p>
+<p>This page is still under construction. Expect it to be live by January '22<br>
+  For link to my repos, please click <a href="https://github.com/alvinulido">here</a> <br>
+  For my vita, please click <a href="https://www.linkedin.com/in/alvin-ulido-lumbanraja-785b567a/">here</a>
+  </p>
 </body>
 </html>
