--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,6 +1,12 @@
 ---
 layout: page
 title: Contacts
-
-{% include contact-section.html %}
+<!-- contact -->
+<section class="section">
+  <div class="container">
+    {% include contact-section.html %}
+    {% endfor %}
+  </div>
+</section>
+<!-- /blog -->
 ---
