--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ layout: default
 
 {% include education-section.html %}
 
-<!-- {% include skills-section.html %} -->
+<!--include skills-section.html-->
